<resources>
    <string name="app_name">Represent</string>
    <string name="title"><u>Represent!</u> </string>
    <string name="helping_you">Helping you find your representatives!</string>
    <string name="zip_code"><u>Enter your Zip Code Below:</u></string>
    <string name="democrat_repub_logo">Democrat and Republican Logo</string>
    <string name="next_button_1">Next</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="or_1"><u>OR</u></string>
    <string name="address"><u>Enter your Address Below:</u></string>
    <string name="next_button_2">Next</string>
    <string name="current_loc_button">Select your current Location</string>
    <string name="random_loc_button">Select a random location</string>
    <string name="example_zipcode">eg: 94704</string>
    <string name="example_address_1">eg: 2650 Durant Ave</string>
    <string name="example_address_2">eg: Putnam #420</string>
    <string name="example_city">eg: Berkeley</string>
    <string name="example_state">eg: CA</string>
    <string name="senator_title"><u>Senator:</u></string>
    <string name="representative_title"><u>Representative:</u></string>
    <string name="senator_1_name_placeholder">Name of Senator 1</string>
    <string name="senator_2_name_placeholder">Name of Senator 2</string>
    <string name="representative_placeholder">Name of Representative</string>
    <string name="party_title"><u>Party:</u></string>
    <string name="party_senator_1_placeholder">Party of Senator 1</string>
    <string name="party_senator_2_placeholder">Party of Senator 2</string>
    <string name="party_representative_placeholder">Party of Representative</string>
    <string name="more_info_button">More Info</string>
    <string name="phone_number_title"><u>Phone Number:</u></string>
    <string name="phone_number_placeholder">Phone Number</string>
    <string name="website_button">Website</string>
    <string name="email_title"><u>Email Address:</u></string>
    <string name="email_address_placeholder">Email Address</string>
    <string name="email_not_available">Not Available</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
</resources>