<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMoreInfo"
    android:background="#7CE0F8"
    android:textAllCaps="false">


    <View
        android:id="@+id/view"
        android:layout_width="358dp"
        android:layout_height="429dp"
        android:background="@drawable/card_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />


    <ImageView
        android:id="@+id/senator_1_pic"
        android:layout_width="109dp"
        android:layout_height="156dp"
        android:src="@drawable/no_image_available"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.153" />

    <TextView
        android:id="@+id/rep_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/representative_title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/party_title"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/senator_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:hint="@string/representative_placeholder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toEndOf="@+id/senator_1_pic"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/party_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/party_title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/phone_number_title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/email_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/email_title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.561" />

    <TextView
        android:id="@+id/senator_1_party"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:hint="@string/party_representative_placeholder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/senator_1_pic"
        app:layout_constraintTop_toBottomOf="@+id/senator_1_name"
        app:layout_constraintVertical_bias="0.149" />

    <TextView
        android:id="@+id/phone_number_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:hint="@string/phone_number_placeholder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toEndOf="@+id/senator_1_pic"
        app:layout_constraintTop_toBottomOf="@+id/senator_1_party"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:hint="@string/email_address_placeholder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toEndOf="@+id/senator_1_pic"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_actual"
        app:layout_constraintVertical_bias="0.174" />

    <Button
        android:id="@+id/button5"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:background="@drawable/button_box"
        android:text="@string/website_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/button6"
        android:layout_width="109dp"
        android:layout_height="39dp"
        android:background="@drawable/button_box"
        android:text="@string/website_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.543" />

</androidx.constraintlayout.widget.ConstraintLayout>