<?xml version="1.0" encoding="utf-8"?>
<!-- Credit to https://www.youtube.com/watch?v=rsqFpIp_DDA&ab_channel=Rectfy
     https://www.youtube.com/watch?v=Le9ZjciKLEc&ab_channel=AnggaRisky -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#7CE0F8"
    android:textAllCaps="false"

    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="365dp"
        android:layout_height="101dp"
        android:background="@drawable/title_box"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#311344"
        android:textSize="64sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/righteous"
        android:text="@string/helping_you"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.006" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="97dp"
        android:src="@drawable/democrat_repub_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.023"
        android:contentDescription="@string/democrat_repub_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/zip_code"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="107dp"
        android:layout_height="43dp"
        android:background="@drawable/text_box"
        android:gravity="center"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="41dp"
        android:background="@drawable/button_box"
        android:text="@string/next_button_1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.041" />


</androidx.constraintlayout.widget.ConstraintLayout>